force-app/main/default/objects/Contact/fields/Is_Tall__c.field-meta.xml
<CustomField>
    <fullName>Is_Tall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tall</label>
    <type>Checkbox</type>
</CustomField>