force-app/main/default/objects/Contact/fields/Martial_Arts__c.field-meta.xml
<CustomField>
    <fullName>Martial_Arts__c</fullName>
    <label>Martial Arts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Karate</fullName>
            </value>
            <value>
                <fullName>Kung-Fu</fullName>
            </value>
            <value>
                <fullName>Jiu Jitsu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>